--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=task-app
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://localhost
+APP_URL=https://task-app.dainaka.live
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=task_app
+DB_DATABASE=task-app
 DB_USERNAME=root
 DB_PASSWORD=
 
